# DavidBruck

./: LICENSE  README.md
Week1/: README.md
Week1/ProgrammingInHaskellC1/p3/: p3.cabal
Week1/ProgrammingInHaskellC1/p3/app/: Main.hs
Week1/ProgrammingInHaskellC1/p3/src/: C1P3.hs
Week1/ProgrammingInHaskellC1/p4/: p4.cabal
Week1/ProgrammingInHaskellC1/p4/app/: Main.hs
Week1/ProgrammingInHaskellC1/p4/src/: C1P4.hs
Week1/ProgrammingInHaskellC10/p1/: p1.cabal
Week1/ProgrammingInHaskellC10/p1/app/: Main.hs
Week1/ProgrammingInHaskellC10/p1/src/: C10P1.hs  C10P1BookFunctions.hs
Week1/ProgrammingInHaskellC10/p4/: p4.cabal  stack.yaml
Week1/ProgrammingInHaskellC10/p4/app/: Main.hs
Week1/ProgrammingInHaskellC10/p4/src/: C10P4.hs
Week1/ProgrammingInHaskellC2/p4/: p4.cabal
Week1/ProgrammingInHaskellC2/p4/app/: Main.hs
Week1/ProgrammingInHaskellC2/p4/src/: C2P4.hs
Week1/ProgrammingInHaskellC2/p5/: p5.cabal
Week1/ProgrammingInHaskellC2/p5/app/: Main.hs
Week1/ProgrammingInHaskellC2/p5/src/: C2P5.hs
Week2/: README.md
Week2/ProgrammingInHaskellC4/p2/: p2.cabal
Week2/ProgrammingInHaskellC4/p2/app/: Main.hs
Week2/ProgrammingInHaskellC4/p2/src/: C4P2.hs
Week2/ProgrammingInHaskellC5/p3/: p3.cabal
Week2/ProgrammingInHaskellC5/p3/app/: Main.hs
Week2/ProgrammingInHaskellC5/p3/src/: C5P3.hs
Week2/ProgrammingInHaskellC5/p5/: p5.cabal
Week2/ProgrammingInHaskellC5/p5/app/: Main.hs
Week2/ProgrammingInHaskellC5/p5/src/: C5P5.hs
Week2/ProgrammingInHaskellC6/p4/: p4.cabal
Week2/ProgrammingInHaskellC6/p4/app/: Main.hs
Week2/ProgrammingInHaskellC6/p4/src/: C6P4.hs
Week2/ProgrammingInHaskellC6/p5/: p5.cabal
Week2/ProgrammingInHaskellC6/p5/app/: Main.hs
Week2/ProgrammingInHaskellC6/p5/src/: C6P5.hs
Week2/ProgrammingInHaskellC7/p7/: p7.cabal
Week2/ProgrammingInHaskellC7/p7/app/: Main.hs
Week2/ProgrammingInHaskellC7/p7/src/: C7P7.hs  C7P7BookFunctions.hs
Week2/ProgrammingInHaskellC8/p6/: p6.cabal
Week2/ProgrammingInHaskellC8/p6/app/: Main.hs
Week2/ProgrammingInHaskellC8/p6/src/: C8P6.hs  Parsing.hs
Week3/: README.md
Week3/LearnYouAHaskellC11/: c11.cabal
Week3/LearnYouAHaskellC11/app/: Main.hs
Week3/LearnYouAHaskellC12/: c12.cabal
Week3/LearnYouAHaskellC12/app/: Main.hs
Week3/LearnYouAHaskellC12/src/: C12.hs
Week3/LearnYouAHaskellC13/: c13.cabal
Week3/LearnYouAHaskellC13/app/: Main.hs
Week3/LearnYouAHaskellC13/src/: C13.hs
Week3/ProgrammingInHaskellC10/p6/: p6.cabal
Week3/ProgrammingInHaskellC10/p6/app/: Main.hs
Week3/ProgrammingInHaskellC10/p6/src/: C10P6.hs  C10P6BookFunctions.hs
Week3/ProgrammingInHaskellC9/p3/: p3.cabal
Week3/ProgrammingInHaskellC9/p3/app/: Main.hs
Week3/ProgrammingInHaskellC9/p3/src/: C9P3.hs  C9P3BookFunctions.hs
Week3/ProgrammingInHaskellC9/p4/: p4.cabal
Week3/ProgrammingInHaskellC9/p4/app/: Main.hs
Week3/ProgrammingInHaskellC9/p4/src/: C9P4.hs
Week3/ProgrammingInHaskellC9/p4/src/System/IO/: HiddenChar.hs
Week3/ProgrammingInHaskellC9/p4/src/System/IO/HiddenChar/: Posix.hs  Windows.hs
Week3/ProgrammingInHaskellC9/p6/: p6.cabal
Week3/ProgrammingInHaskellC9/p6/app/: Main.hs
Week3/ProgrammingInHaskellC9/p6/src/: C9P6.hs
Week4/: README.md
Week4/ProgrammingInHaskellC11/p4/: p4.cabal
Week4/ProgrammingInHaskellC11/p4/app/: Main.hs
Week4/ProgrammingInHaskellC11/p4/src/: C11P4.hs  C11P4BookFunctions.hs
Week4/ProgrammingInHaskellC11/p5/: p5.cabal
Week4/ProgrammingInHaskellC11/p5/app/: Main.hs
Week5/: README.md  cabal.project
Week5/CrudGenerator/: CrudGenerator.cabal  Example.hs  stack.yaml
Week5/CrudGenerator/app/: Main.hs
Week5/CrudGenerator/src/: CrudGenerator.hs  CrudTemplates.hs
Week5/DatabaseHelpers/: DatabaseHelpers.cabal  stack.yaml
Week5/DatabaseHelpers/src/: DatabaseHelpers.hs
Week5/InitializeDatabase/: InitializeDatabase.cabal  stack.yaml
Week5/InitializeDatabase/app/: Main.hs
Week5/InitializeDatabase/src/: InitializeDatabase.hs
Week5/MovieSearchSite/: MovieSearchSite.cabal  Setup.hs  stack.yaml
Week5/MovieSearchSite/app/: Main.hs
Week5/MovieSearchSite/src/MovieSearchSite/: Controller.hs  ErrorController.hs  Exceptions.hs  Home.hs  Html.hs  IMDBCrud.hs  MovieRoute.hs  Response.hs  Router.hs  Search.hs  ShowTitles.hs  Title.hs
Week5/PopulateDatabase/: PopulateDatabase.cabal  README.md  Setup.hs  stack.yaml
Week5/PopulateDatabase/app/: Main.hs
