cabal-version: 1.12

name:           c11
version:        0.1.0.0
author:         David Bruck
build-type:     Simple

executable c11-exe
  main-is: Main.hs
  other-modules:
      Paths_c11
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010
