cabal-version: 1.12

name:           c12
version:        0.1.0.0
author:         David Bruck
build-type:     Simple

library
  exposed-modules:
      C12
  other-modules:
      Paths_c12
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , cond
  default-language: Haskell2010

executable c12-exe
  main-is: Main.hs
  other-modules:
      Paths_c12
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , c12
  default-language: Haskell2010
