cabal-version: 1.12

name:           c13
version:        0.1.0.0
author:         David Bruck
build-type:     Simple

library
  exposed-modules:
      C13
  default-extensions: LambdaCase
  other-modules:
      Paths_c13
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , errors
    , mtl
  default-language: Haskell2010

executable c13-exe
  main-is: Main.hs
  other-modules:
      Paths_c13
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , c13
  default-language: Haskell2010
