cabal-version: 1.12

name:           CrudGenerator
version:        0.1.0.0
author:         David Bruck
build-type:     Simple

library
  exposed-modules:
      CrudGenerator
  default-extensions:
      TemplateHaskell
  other-modules:
      Paths_CrudGenerator
    , CrudTemplates
  hs-source-dirs:
      src
  build-depends:
      DatabaseHelpers ==0.1.0.0
    , base >=4.7 && <5
    , mtl
    , text
    , template-haskell ==2.15.0.0
  default-language: Haskell2010

executable CrudGenerator-exe
  main-is: Main.hs
  other-modules:
      Paths_CrudGenerator
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      CrudGenerator
    , base >=4.7 && <5
    , DatabaseHelpers ==0.1.0.0
    , direct-sqlite ==2.3.26
    , mtl
    , text
  default-language: Haskell2010
