cabal-version: 1.12

name:           CrudGenerator
version:        0.1.0.0
author:         David Bruck
build-type:     Simple

library
  exposed-modules:
      CrudGenerator
  default-extensions:
      TemplateHaskell
  other-modules:
      Paths_CrudGenerator
  hs-source-dirs:
      src
  build-depends:
      DatabaseHelpers ==0.1.0.0
    , direct-sqlite ==2.3.26
    , base >=4.7 && <5
    , mtl
    , text
    , template-haskell ==2.15.0.0
  default-language: Haskell2010
