cabal-version: 1.12

name:           InitializeDatabase
version:        0.1.0.0
author:         David Bruck
build-type:     Simple

executable InitializeDatabase-exe
  main-is: Main.hs
  other-modules:
      Paths_InitializeDatabase
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      DatabaseHelpers ==0.1.0.0
    , base >=4.7 && <5
    , mtl
  default-language: Haskell2010
