cabal-version: 1.12

name:           InitializeDatabase
version:        0.1.0.0
author:         David Bruck
build-type:     Simple

library
  exposed-modules:
      InitializeDatabase
  other-modules:
      Paths_InitializeDatabase
  hs-source-dirs:
      src
  build-depends:
      DatabaseHelpers ==0.1.0.0
    , base >=4.7 && <5
    , process
    , mtl
    , errors
  default-language: Haskell2010

executable InitializeDatabase-exe
  main-is: Main.hs
  other-modules:
      Paths_InitializeDatabase
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      DatabaseHelpers ==0.1.0.0
    , base >=4.7 && <5
    , mtl
  default-language: Haskell2010
