cabal-version: 1.12

name:           MovieSearchSite
version:        0.1.0.0
author:         David Bruck
build-type:     Custom

custom-setup
  setup-depends:
      Cabal ==3.2.0.0
    , DatabaseHelpers ==0.1.0.0
    , InitializeDatabase ==0.1.0.0
    , process
    , base
    , mtl
    , errors

library
  exposed-modules:
      MovieSearchSite.Controller
    , MovieSearchSite.ErrorController
    , MovieSearchSite.Router
  other-modules:
      Paths_MovieSearchSite
    , MovieSearchSite.Exceptions
    , MovieSearchSite.Home
    , MovieSearchSite.Search
    , MovieSearchSite.Title
  hs-source-dirs:
      src
  build-depends:
      DatabaseHelpers ==0.1.0.0
    , CrudGenerator ==0.1.0.0
    , http-server ==1.0.6
    , http-types ==0.12.3
    , mtl
    , text
    , url ==2.1.3
    , errors
    , exceptions
    , blaze-builder ==0.4.1.0
    , bytestring
    , base >=4.7 && <5
    , shakespeare ==2.0.24
  default-language: Haskell2010

executable MovieSearchSite-exe
  main-is: Main.hs
  default-extensions:
      QuasiQuotes
    , LambdaCase
  other-modules:
      Paths_MovieSearchSite
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      http-server ==1.0.6
    , HTTP ==4000.3.14
    , mtl
    , bytestring
    , time ==1.9.3
    , shakespeare ==2.0.24
    , blaze-html ==0.9.1.2
    , base >=4.7 && <5
    , MovieSearchSite
  default-language: Haskell2010
