cabal-version: 1.12

name:           PopulateDatabase
version:        0.1.0.0
author:         David Bruck
build-type:     Custom

custom-setup
  setup-depends:
      Cabal ==3.2.0.0
    , DatabaseHelpers ==0.1.0.0
    , process
    , base
    , mtl
    , errors

executable PopulateDatabase-exe
  main-is: Main.hs
  default-extensions: DeriveGeneric
  other-modules:
      Paths_PopulateDatabase
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      DatabaseHelpers ==0.1.0.0
    , CrudGenerator ==0.1.0.0
    , base >=4.7 && <5
    , mtl
    , bytestring
    , http-conduit ==2.3.7.3
    , zlib
    , text
    , errors
    , cassava
    , vector
  default-language: Haskell2010
