cabal-version: 1.12

name:           p4
version:        0.1.0.0
author:         David Bruck
build-type:     Simple

library
  exposed-modules:
      C1P4
  other-modules:
      Paths_p4
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable p4-exe
  main-is: Main.hs
  other-modules:
      Paths_p4
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , p4
  default-language: Haskell2010
