cabal-version: 1.12

name:           p1
version:        0.1.0.0
author:         David Bruck
build-type:     Simple

library
  exposed-modules:
      C10P1
    , C10P1BookFunctions
  other-modules:
      Paths_p1
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable p1-exe
  main-is: Main.hs
  other-modules:
      Paths_p1
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , p1
  default-language: Haskell2010
