cabal-version: 1.12

name:           p2
version:        0.1.0.0
author:         David Bruck
build-type:     Simple

library
  exposed-modules:
      C4P2
  other-modules:
      Paths_p2
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable p2-exe
  main-is: Main.hs
  other-modules:
      Paths_p2
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , p2
  default-language: Haskell2010
