cabal-version: 1.12

name:           p7
version:        0.1.0.0
author:         David Bruck
build-type:     Simple

library
  exposed-modules:
      C7P7
    , C7P7BookFunctions
  other-modules:
      Paths_p7
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable p7-exe
  main-is: Main.hs
  other-modules:
      Paths_p7
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , p7
  default-language: Haskell2010
