cabal-version: 1.12

name:           p4
version:        0.1.0.0
author:         David Bruck
build-type:     Simple

library
  exposed-modules:
      System.IO.HiddenChar
    , C9P4
    , C9P3
    , C9P3BookFunctions
  other-modules:
      Paths_p4
  hs-source-dirs:
      ../p3/src
    , src
  build-depends:
      base >=4.7 && <5
    , mtl
  if os(linux)
    cpp-options:                    -DOS_LINUX
    other-modules:                  System.IO.HiddenChar.Posix
  if os(windows)
    cpp-options:                    -DOS_WINDOWS
    other-modules:                  System.IO.HiddenChar.Windows
  if os(darwin)
    cpp-options:                    -DOS_MACOS
    other-modules:                  System.IO.HiddenChar.Posix
  default-language: Haskell2010

executable p4-exe
  main-is: Main.hs
  other-modules:
      Paths_p4
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , p4
  default-language: Haskell2010
