cabal-version: 1.12

name:           p6
version:        0.1.0.0
author:         David Bruck
build-type:     Simple

library
  exposed-modules:
      C9P6
  other-modules:
      Paths_p6
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , mtl
    , transformers
  default-language: Haskell2010

executable p6-exe
  main-is: Main.hs
  other-modules:
      Paths_p6
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , p6
  default-language: Haskell2010
